--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Nuevo.cshtml
@@ -172,7 +172,7 @@ $(function () {
 });
 
 function OnSelectedProductoChanged(s, e) {
-    GridViewPartial_inv_det.GetEditor("IdUnidadMedida").PerformCallback();
+    GridViewPartial_inv_det.GetEditor("IdUnidadMedida_sinConversion").PerformCallback();
     SetUnidadMedida(s, e);
 }
 
@@ -193,7 +193,7 @@ function SetUnidadMedida(s, e) {
         bProcessing: true,
         contentType: 'application/json; charset=utf-8',
         success: function (data) {
-            GridViewPartial_inv_det.GetEditor('IdUnidadMedida').SetValue(data.IdUnidadMedida);
+            GridViewPartial_inv_det.GetEditor('IdUnidadMedida_sinConversion').SetValue(data.IdUnidadMedida);
         },
         error: function (error) {
         }
