--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index3.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index3.cshtml
@@ -124,6 +124,7 @@
             </div>
             <div class="col-md-1">
                 <div class="form-group">
+                    <label>               </label>
                     <button type="button" class="btn btn-primary form-control" onclick="fac_con_saldo()" title="Buscar deudas">
                         <i class="fa fa-search"></i>
                     </button>
