--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_PFactura_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_PFactura_det.cshtml
@@ -61,8 +61,15 @@
 
         settings.Columns.Add(column =>
         {
-            column.FieldName = "vt_cantidad";
+            column.FieldName = "pd_cantidad";
             column.Caption = "Cantidad";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.Width = Unit.Percentage(7);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Saldo";
+            column.Caption = "Saldo";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(7);
         });
@@ -78,14 +85,7 @@
             column.FieldName = "vt_PorDescUnitario";
             column.Caption = "% Desc. uni.";
             column.Width = Unit.Percentage(7);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_PrecioFinal";
-            column.Caption = "Precio final";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(7);
-        });
+        });        
         settings.Columns.Add(column =>
         {
             column.FieldName = "vt_Subtotal";
