--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_GridViewPartial_egr_inv_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_GridViewPartial_egr_inv_det.cshtml
@@ -65,7 +65,7 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdUnidadMedida_sinConversion";
-            column.Caption = "Unidad de medida";
+            column.Caption = "U. Medida";
             column.Width = Unit.Percentage(7);
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.EditorProperties().ComboBox(p =>
