--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Nuevo.cshtml
@@ -166,7 +166,7 @@
                 bProcessing: true,
                 contentType: 'application/json; charset=utf-8',
                 success: function (data) {
-                    GridView_egr_inv_det.GetEditor('IdUnidadMedida').SetValue(data.IdUnidadMedida_Consumo);
+                    GridView_egr_inv_det.GetEditor('IdUnidadMedida_sinConversion').SetValue(data.IdUnidadMedida_Consumo);
                 },
                 error: function (error) {
                 }
