--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/Modificar.cshtml
@@ -217,7 +217,7 @@
 }
 <script type="text/javascript">
 
-        function GetInfoProducto(s, e) {
+    function GetInfoProducto(s, e) {
         $("#Secuencia").text(0);
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
@@ -240,4 +240,29 @@
             }
         });
     }
+
+    function set_termino_pago_x_proveedor() {
+        if (IdProveedor.GetValue() > 0) {
+            var datos = {
+                IdEmpresa: $("#IdEmpresa").val(),
+                IdProveedor: IdProveedor.GetValue()
+            }
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("get_info_termino_pago_x_proveedor", "OrdenServicio", new { Area = "Compras" })',
+                async: false,
+                bDeferRender: true,
+                bProcessing: true,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    $("#IdTerminoPago").val(data.IdTerminoPago);
+                    $("#oc_plazo").val(data.plazo);
+                },
+                error: function (error) {
+                }
+            });
+        }
+    };
 </script>
