--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Nuevo.cshtml
@@ -178,9 +178,9 @@
     }
 }
 <script type="text/javascript">
-    $("#IdTerminoPago").change(function () {
-        get_info_termino_pago();
-    });
+    //$("#IdTerminoPago").change(function () {
+    //    get_info_termino_pago();
+    //});
 
     function GetInfoProducto(s, e) {
         $("#Secuencia").text(0);
@@ -223,7 +223,7 @@
                 contentType: 'application/json; charset=utf-8',
                 success: function (data) {
                     $("#IdTerminoPago").val(data.IdTerminoPago);
-                    get_info_termino_pago();
+                    $("#oc_plazo").val(data.plazo);
                 },
                 error: function (error) {
                 }
@@ -231,7 +231,7 @@
         }
     };
 
-    function get_info_termino_pago() {
+    @*function get_info_termino_pago() {
         if ($("#IdTerminoPago").val() > 0) {
             var datos = {
                 IdEmpresa: $("#IdEmpresa").val(),
@@ -254,5 +254,5 @@
                 }
             });
         }
-    };
+    };*@
 </script>
