--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/_GridViewPartial_orden_servicio_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/_GridViewPartial_orden_servicio_det.cshtml
@@ -133,6 +133,7 @@
         {
             column.FieldName = "IdCod_Impuesto";
             column.Caption = "Impuesto";
+            column.VisibleIndex = 6;
             column.Width = Unit.Percentage(8);
             column.Visible = false;
             column.EditorProperties().ComboBox(p =>
@@ -178,11 +179,11 @@
             column.Caption = "Centro de costo";
             column.Width = Unit.Percentage(10);
             column.Visible = false;
-            column.VisibleIndex = 7;
+            column.VisibleIndex = 8;
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.SetEditItemTemplateContent(c =>
             {
-                Html.RenderPartial("_CmbCentroCosto_Compras", DataBinder.Eval(c.DataItem, "IdCentroCosto"));
+                Html.RenderPartial("_CmbCentroCosto_OS", DataBinder.Eval(c.DataItem, "IdCentroCosto"));
             });
         });
 
